[package]
name = "anamorphic"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Rust library for anamorphic encryption - plausible deniability cryptography"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/anamorphic"
keywords = ["cryptography", "encryption", "anamorphic", "plausible-deniability"]
categories = ["cryptography"]

[dependencies]
rand = "0.8"
sha2 = "0.10"
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
hex = "0.4"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num-bigint = { version = "0.4", features = ["rand", "serde"] }
num-traits = "0.2"
num-integer = "0.1"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "anamorphic_bench"
harness = false

[lib]
name = "anamorphic"
path = "src/lib.rs"

[[bin]]
name = "anamorphic-cli"
path = "src/main.rs"
